# pidgin

./: ChangeLog.API  README  convey.yaml  meson.build
finch/: gntaccount.c  gntblist.c  gntconn.c  gntmedia.c  gntnotify.c  gntplugin.c  gntprefs.c  gntrequest.c  gntrequest.h  gntroomlist.c
libpurple/: account.c  account.h  accounts.c  buddyicon.c  buddylist.c  cmds.c  connection.c  connection.h  conversations.h  core.c  idle.c  image-store.c  mediamanager.c  meson.build  network.c  network.h  plugins.c  prefs.c  purpleaccountmanager.c  purpleaccountmanager.h  purplechatconversation.c  purplecontactinfo.c  purplecontactinfo.h  purplecontactmanager.c  purplecontactmanager.h  purpleconversation.c  purpleconversation.h  purpleconversationmanager.c  purpleconversationmanager.h  purpleconversationmember.c  purplegdkpixbuf.c  purplegio.c  purpleimconversation.c  purplemarkup.c  purplemessage.c  purplemessage.h  purplenotificationmanager.c  purpleperson.c  purpleplugininfo.c  purpleplugininfo.h  (+31 more)
libpurple/data/: im.pidgin.Purple.PresenceManager.gschema.xml  meson.build
libpurple/media/: codec.c
libpurple/protocols/: meson.build
libpurple/protocols/ircv3/: ircv3generategir.c  meson.build  purpleircv3.h.in  purpleircv3capabilities.c  purpleircv3capabilities.h  purpleircv3connection.c  purpleircv3connection.h  purpleircv3core.c  purpleircv3core.h  purpleircv3messagehandlers.c  purpleircv3messagehandlers.h  purpleircv3parser.c  purpleircv3parser.h  purpleircv3protocol.h  purpleircv3protocolim.h  purpleircv3sasl.c  purpleircv3sasl.h
libpurple/protocols/ircv3/tests/: meson.build
libpurple/request/: purplerequestfieldaccount.c  purplerequestfieldaccount.h  purplerequestfieldbool.c  purplerequestfieldbool.h  purplerequestfieldchoice.c  purplerequestfieldchoice.h  purplerequestfielddatasheet.c  purplerequestfielddatasheet.h  purplerequestfieldimage.c  purplerequestfieldimage.h  purplerequestfieldint.c  purplerequestfieldint.h  purplerequestfieldlabel.c  purplerequestfieldlabel.h  purplerequestfieldlist.c  purplerequestfieldlist.h  purplerequestfieldstring.c  purplerequestfieldstring.h
libpurple/tests/: meson.build  test_account_manager.c  test_account_option.c  test_authorization_request.c  test_contact.c  test_contact_info.c  test_contact_manager.c  test_conversation.c  test_conversation_manager.c  test_credential_manager.c  test_credential_provider.c  test_history_adapter.c  test_history_manager.c  test_image.c  test_markup.c  test_notification.c  test_tags.c  (+18 more)
pidgin/: gtkblist.c  gtkconv.c  gtkconv.h  gtkdialogs.c  gtkmedia.c  gtknotify.c  gtkrequest.c  gtkroomlist.c  gtkutils.c  gtkwhiteboard.c  gtkxfer.c  libpidgin.c  meson.build  pidginabout.c  pidginaccountchooser.c  pidginaccountdisplay.c  pidginaccountdisplay.h  pidginaccounteditor.c  pidginaccounteditor.h  pidginaccountmanager.c  pidginaccountmanager.h  pidginaccountsdisabledmenu.c  pidginaccountsenabledmenu.c  pidginaddbuddydialog.c  pidginaddchatdialog.c  pidginapplication.c  pidginavatar.c  pidgincontactlist.c  pidgindebug.c  pidgindisplaywindow.c  pidginiconname.c  pidgininfopane.c  pidgininfopane.h  pidginnotificationaddcontact.c  pidginnotificationauthorizationrequest.c  pidginnotificationconnectionerror.c  pidginnotificationlist.c  pidginpluginsdialog.c  pidginprotocolchooser.c  pidginstatusbox.c  (+7 more)
po/: POTFILES.in
subprojects/: gplugin.wrap  hasl.wrap
(+99 files in other folders)
